# meta-human-dna-addon

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  cspell.json  mkdocs.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: docs.yaml  on-pr.yaml  pytest-mac.sh  pytest-windows.bat  re-use-benchmark.yaml  re-use-lint.yaml  re-use-release.yaml  re-use-tests.yaml  release.yaml
docs/: helpful-resources.md  index.md  terminology.md  textures.md  unreal-configuration.md
docs/contributing/: development.md  documentation.md  testing.md
docs/user-interface/: face-board.md  import.md  output.md  rig-logic.md  shape-keys.md  utilities.md  view-options.md
docs/workflows/: face-form-wrap.md
scripts/pre-commit/: check_addon_version.py
scripts/profiling_utils/: __init__.py  ci_benchmark.py  depsgraph_tracker.py  exporters.py  profile_rig_evaluation.py  viewport_hud.py
src/addons/meta_human_dna/: __init__.py  blender_manifest.toml  constants.py  exceptions.py  key_maps.py  manual_map.py  operators.py  properties.py  release_notes.md  rig_instance.py  rig_logic.py  typing.py
src/addons/meta_human_dna/bindings/: __init__.py
src/addons/meta_human_dna/components/: __init__.py  base.py  body.py  head.py
src/addons/meta_human_dna/dna_io/: __init__.py  calibrator.py  exporter.py  importer.py  misc.py
src/addons/meta_human_dna/editors/backup_manager/: core.py  operators.py  properties.py  ui.py
src/addons/meta_human_dna/editors/pose_editor/: change_tracker.py  core.py  function_curves.py  operators.py  properties.py  ui.py  viewport_overlay.py
src/addons/meta_human_dna/editors/rbf_editor/: change_tracker.py  core.py  function_curves.py  operators.py  properties.py  ui.py  viewport_overlay.py
src/addons/meta_human_dna/resources/images/: mask_names.json
src/addons/meta_human_dna/resources/mappings/: body_topology_vertex_groups.json  head_to_body_edge_loop.json  head_topology_vertex_groups.json  head_vertex_colors.json
src/addons/meta_human_dna/resources/scripts/: save_rig_instance_data.py
src/addons/meta_human_dna/ui/: addon_preferences.py  callbacks.py  importer.py  menus.py  toast.py  view_3d.py  viewport_overlay.py
src/addons/meta_human_dna/utilities/: __init__.py  action.py  armature.py  material.py  mesh.py  misc.py
tests/: conftest.py  constants.py  test_addon_registration.py  test_animation.py  test_body_animation.py  test_body_pose_editor.py  test_body_rbf_editor.py  test_body_rig_logic.py  test_convert_to_dna.py  test_head_calibrator.py  test_head_exporter.py  test_head_rig_logic.py  test_rbf_edits.py  test_reference_blend_file.py  test_rig_instance_ops.py
tests/fixtures/: addon.py  dna_data.py  scene.py
tests/test_files/animation/head/: MHC_FaceBoardROM.fbx
tests/test_files/fbx/mhc_conformed_topology/: body.fbx  head.fbx
tests/test_files/json/poses/ada_body_rig/calf_l_UERBFSolver/: calf_l_back_120.json  calf_l_back_130.json  calf_l_back_150.json  calf_l_back_50.json  calf_l_back_90.json
tests/test_files/json/poses/ada_body_rig/calf_r_UERBFSolver/: calf_r_back_120.json  calf_r_back_130.json  calf_r_back_150.json  calf_r_back_50.json  calf_r_back_90.json
tests/test_files/json/poses/ada_body_rig/clavicle_l_UERBFSolver/: clavicle_l_back_30.json  clavicle_l_down_20.json  clavicle_l_fwd_30.json  clavicle_l_up_40.json
tests/test_files/json/poses/ada_body_rig/clavicle_r_UERBFSolver/: clavicle_r_back_30.json  clavicle_r_down_20.json  clavicle_r_fwd_30.json  clavicle_r_up_40.json
tests/test_files/json/poses/ada_body_rig/foot_l_UERBFSolver/: foot_l_down_60.json  foot_l_up_35.json
tests/test_files/json/poses/ada_body_rig/foot_r_UERBFSolver/: foot_r_down_60.json  foot_r_up_35.json
tests/test_files/json/poses/ada_body_rig/hand_l_UERBFSolver/: hand_l_down_90.json  hand_l_up_20.json  hand_l_up_90.json
tests/test_files/json/poses/ada_body_rig/hand_r_UERBFSolver/: hand_r_down_90.json  hand_r_up_20.json  hand_r_up_90.json
tests/test_files/json/poses/ada_body_rig/index_l_01_UERBFSolver/: index_l_01_curl_070.json  index_l_01_push_090.json
tests/test_files/json/poses/ada_body_rig/index_l_01_half_UERBFSolver/: index_l_01_half_caps_020.json  index_l_01_half_curl_120.json  index_l_01_half_push_120.json
tests/test_files/json/poses/ada_body_rig/index_l_02_UERBFSolver/: index_l_02_curl_080.json
tests/test_files/json/poses/ada_body_rig/index_l_02_half_UERBFSolver/: index_l_02_half_caps_020.json  index_l_02_half_curl_120.json  index_l_02_half_push_120.json
tests/test_files/json/poses/ada_body_rig/index_l_03_UERBFSolver/: index_l_03_curl_090.json
tests/test_files/json/poses/ada_body_rig/index_l_03_half_UERBFSolver/: index_l_03_half_caps_020.json  index_l_03_half_curl_120.json  index_l_03_half_push_120.json
tests/test_files/json/poses/ada_body_rig/index_r_01_UERBFSolver/: index_r_01_curl_070.json  index_r_01_push_090.json
tests/test_files/json/poses/ada_body_rig/index_r_01_half_UERBFSolver/: index_r_01_half_caps_020.json  index_r_01_half_curl_120.json  index_r_01_half_push_120.json
tests/test_files/json/poses/ada_body_rig/index_r_02_UERBFSolver/: index_r_02_curl_080.json
tests/test_files/json/poses/ada_body_rig/index_r_02_half_UERBFSolver/: index_r_02_half_caps_020.json  index_r_02_half_curl_120.json  index_r_02_half_push_120.json
tests/test_files/json/poses/ada_body_rig/index_r_03_UERBFSolver/: index_r_03_curl_090.json
tests/test_files/json/poses/ada_body_rig/index_r_03_half_UERBFSolver/: index_r_03_half_caps_020.json  index_r_03_half_curl_120.json  index_r_03_half_push_120.json
tests/test_files/json/poses/ada_body_rig/lowerarm_l_UERBFSolver/: lowerarm_l_in_10.json  lowerarm_l_in_110.json  lowerarm_l_in_35.json  lowerarm_l_in_50.json  lowerarm_l_in_75.json  lowerarm_l_in_90.json  lowerarm_l_out_10.json  lowerarm_l_out_35.json
tests/test_files/json/poses/ada_body_rig/lowerarm_r_UERBFSolver/: lowerarm_r_in_10.json  lowerarm_r_in_110.json  lowerarm_r_in_35.json  (+5 more)
tests/utilities/: assertions.py  bones.py  dna_data.py  modify.py  pose_editor.py  rbf_editor.py
(+240 files in other folders)
